Version history - highlights
============================

v0.3.14  ??
-------
   - Moved fancy error messages to a frame, instead of a redirect.
   - Added support for catch-all backends (hostname = unknown).
   - Added timeouts to tunnel and backend connection code to reduce stalling.
   - Moved tunnel management to separate thread.


v0.3.13  2011.01.25
-------
   - Fixed yet another flow-control problem (bad error handling)


v0.3.12  2011.01.21
-------
   - Report a config error when the same backend is defined twice.
   - Don't submit crash reports when misconfigured. *sigh*


v0.3.11  2011.01.20
-------
   - Removed debugging code to improve privacy.
   - Reduced memory footprint slightly, especially on the front-end.
   - Fixed bugs in 3rd party dynamic DNS support, improved docs.


v0.3.10  2011.01.15
-------
   - BUGFIX: More improvements to IO error handling.


v0.3.9   2011.01.05
------
   - BUGFIX: 0.3.8 broke Windows connections, this should fix them again.
   - Re-opens logs on SIGHUP, for compatibility with logrotate.
   - Tweaked internal CONNECT to work with HTTP/1.1 clients: putty can ssh!
   - Look for CA Certificates in the rc-file if not found in the host OS.
   - Added --errorurl for fancier "back-end unavailable" messages.
   - Better detection of dead tunnels and connection re-establishment.


v0.3.8   2011.01.02
------
   - Many TLS/SSL fixes:
      - Works with pyOpenSSL or the default Python 2.6 ssl module.
      - Can now terminate/unwrap TLS/SSL at the front-end.
      - Routing support for the old lame SSLv2.
      - Built-in TLS/SSL works with pyOpenSSL or python 2.6+ ssl. 
      - TLS tunnels: encryption and FE auth. See --ca_certs and --fe_certname.
   - Protocol fixes: switching from "magic" request paths to HTTP CONNECT.
   - Added --noprobes and probe logging at the back-end.
   - Misc. minor bugfixes.


v0.3.7   2010.12.26
v0.3.6
------
   - Added support for the websocket protocols (Upgrade: WebSocket header)